# g-code-mode

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: llm-report.yml
g_code_mode/: __init__.py  executor.py  preflight.py  reporting.py  server.py  state.py  truncate.py  undo_registry.py
g_code_mode/adapters/: __init__.py
g_code_mode/adapters/cloud_run/: __init__.py  service.py  types.py
g_code_mode/adapters/firestore/: __init__.py  service.py  types.py
g_code_mode/adapters/gcs/: __init__.py  service.py  types.py
g_code_mode/adapters/vertex_ai/: __init__.py  agent_engine.py  types.py
references/: fundamentals.md
skills/g-code-mode/: SKILL.md
skills/gcloud-execute/: SKILL.md
skills/report/: SKILL.md
specs/: ADR-001-language-runtime.md  ADR-002-sandbox.md  ADR-003-state-persistence.md  ADR-004-mcp-transport.md  ADR-005-adapter-architecture.md  cloudflare-mcp-learnings.md  implementation-plan-cloud-run-adapter.md  implementation-plan-firestore-adapter.md  implementation-plan-gcs-adapter.md  implementation-plan-vertex-ai-adapter.md  implementation-plan.md  llm-learnings.md  roadmap.md  user-learnings.md  vision.md
tests/: test_executor.py  test_preflight.py  test_reporting.py  test_state.py  test_truncate.py
tests/adapters/: test_agent_engine.py  test_cloud_run.py  test_firestore.py  test_gcs.py
