[project]
name = "g-code-mode"
version = "0.1.0"
description = "LLM-safe MCP server for Google Cloud operations"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Markus Haegele", email = "haegele.markus@gmail.com" }]
keywords = ["mcp", "google-cloud", "llm", "ai-agent", "vertex-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.0.0",
  "google-cloud-aiplatform[agent_engines]>=1.112.0",
  "google-cloud-run>=0.10.0",
  "google-cloud-firestore>=2.0.0",
  "google-cloud-logging>=3.0.0",
  "google-cloud-resource-manager>=1.0.0",
  "google-auth>=2.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pyright>=1.1.0",
  "ruff>=0.5.0",
]

[project.scripts]
g-code-mode = "g_code_mode.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["g_code_mode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
strict = true
